Propeller obstruction periodic check only for corners to improve responsiveness